Moved shopping templates out of core/ui Fixed a layout bug in the custom multiple-select interface element Added 'featured product' marker in products editor and product list Moved interfaces away from the $j() jquery to the encapsulated jquery method so $() works Added a generic CallbackRegistry JS class to handle custom interface rendering methods in modular code
git-svn-id: file:///Users/jond/svngit/svnrepos/shopp/trunk@37 846ab242-8549-0410-9a75-dfdbdae9473e

--- a/shopp/core/ui/admin.css
+++ b/shopp/core/ui/admin.css
@@ -50,7 +50,7 @@ div.progress div.gloss { position: absolute; width: 100%; height: 10px; backgrou
 
 #wpcontent .form-table select.scrolling { height: auto; }
 
-.form-table .multiple-select { overflow-x: hidden; overflow-y: auto; height: 120px; width: auto; display: inline-block; border: 1px solid rgb(221, 221, 221); background: #ffffff; }
+.form-table .multiple-select { overflow-x: hidden; overflow-y: auto; height: 120px; width: 250px; display: inline-block; border: 1px solid rgb(221, 221, 221); background: #ffffff; }
 
 .form-table .multiple-select ul { list-style-type: none; margin: 0; padding: 0; line-height: 1; }
 .form-table .multiple-select ul li { margin: 0; padding: 2px 2px 0 0; }
